frontend-stag/fe-ingress-stag.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fe-stag
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: apps-stag.cilist.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-fe-cilist-stag
            port:
              number: 80
